@@ -85,9 +85,10 @@ public final class CountingHttpServletRequest implements HttpServletRequest, Par
     private static final String LINE_SEP = System.getProperty("line.separator");
 
     private final HttpServletRequest servletRequest;
-    private final long max;
+    private volatile long max;
     private final Parameterizable parameterizable;
     private volatile ServletInputStream servletInputStream;
+    private String env;
 
     /**
      * Initializes a new {@link CountingHttpServletRequest}.
@@ -117,6 +118,15 @@ public final class CountingHttpServletRequest implements HttpServletRequest, Par
         this.max = max;
         this.servletRequest = servletRequest;
         parameterizable = servletRequest instanceof Parameterizable ? (Parameterizable) servletRequest : null;
+    }
+
+    /**
+     * Sets the max. number of bytes to accept
+     *
+     * @param max The max. number of bytes to accept
+     */
+    public void setMax(long max) {
+        this.max = max;
     }
 
     @Override
@@ -153,12 +163,14 @@ public final class CountingHttpServletRequest implements HttpServletRequest, Par
 
     @Override
     public String getCharacterEncoding() {
-        return servletRequest.getCharacterEncoding();
+        final String characterEncoding = servletRequest.getCharacterEncoding();
+        return null == characterEncoding ? env : characterEncoding;
     }
 
     @Override
     public void setCharacterEncoding(final String env) throws UnsupportedEncodingException {
         servletRequest.setCharacterEncoding(env);
+        this.env = env;
     }
 
     @Override
